--- a/weaviate/docker-compose.yml
+++ b/weaviate/docker-compose.yml
@@ -1,27 +1,22 @@
----
 services:
   weaviate:
-    command:
-    - --host
-    - 0.0.0.0
-    - --port
-    - '8080'
-    - --scheme
-    - http
+    network_mode: host
     image: cr.weaviate.io/semitechnologies/weaviate:1.30.0
+    command:
+      - --host
+      - 0.0.0.0
+      - --port
+      - '8080'
+      - --scheme
+      - http
     ports:
-    - 8080:8080
-    - 50051:50051
-    volumes:
-    - weaviate_data:/var/lib/weaviate
-    restart: on-failure:0
+      - 8080:8080
+      - 50051:50051
     environment:
       QUERY_DEFAULTS_LIMIT: 25
       AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
       PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
-      ENABLE_API_BASED_MODULES: 'true'
       ENABLE_MODULES: 'text2vec-ollama,generative-ollama'
       CLUSTER_HOSTNAME: 'node1'
-volumes:
-  weaviate_data:
-...
+      TEXT2VEC_OLLAMA_BASE_URL: 'http://localhost:11434'
+      GENERATIVE_OLLAMA_BASE_URL: 'http://localhost:11434'
